<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>dev.getelements.elements.stripe</groupId>
    <artifactId>stripe</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Stripe Element</name>
    <description>Namazu Elements integration for Stripe payment processing</description>

    <modules>
        <module>api</module>
        <module>ui</module>
        <module>element</module>
        <module>debug</module>
        <module>integration-test</module>
    </modules>

    <properties>
        <encoding>UTF-8</encoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <elements.version>3.8.4</elements.version>
        <swagger.version>2.2.22</swagger.version>
        <guice.version>7.0.0</guice.version>
        <rs.api>4.0.0</rs.api>
        <jakarta.websocket.version>2.1.0</jakarta.websocket.version>
        <crossfire.version>1.0.4</crossfire.version>
        <servlet.api>6.1.0</servlet.api>
        <logback.version>1.2.3</logback.version>
        <stripe.java.version>25.3.0</stripe.java.version>
        <morphia.version>2.4.14</morphia.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ss'Z'</maven.build.timestamp.format>
        <api.classifier>${project.groupId}.api</api.classifier>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.4.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.3.1</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <phase>verify</phase>
                            <goals>
                                <goal>jar-no-fork</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.6.3</version>
                    <executions>
                        <execution>
                            <id>attach-javadocs</id>
                            <phase>verify</phase>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <!--
        Everything in dependencyManagement serves the purpose of centralizing the versions and configurations of
        artifacts used. Every project will refer to this section when including them on the classpath. This is
        configured this way to deliberately avoid confusion over what should be scoped properly.
    -->
    <dependencyManagement>
        <dependencies>

            <!--
                The BOM for Namazu Elements incorporates all the official SDK packages. The packages are provided
                with correct scope and version matching the requested version.
            -->

            <dependency>
                <groupId>dev.getelements.elements</groupId>
                <artifactId>sdk-bom</artifactId>
                <version>${elements.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!--
                The Element's API and Implementation. Note that the API is provided meaning that it will not be packaged
                directly with the Element. Rather it will be added to the bundle as an API dependency. This is important
                when exporting the Element's interfaces to other Elements within the system.
            -->

            <dependency>
                <groupId>dev.getelements.elements.stripe</groupId>
                <artifactId>api</artifactId>
                <version>${project.version}</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>dev.getelements.elements.stripe</groupId>
                <artifactId>api</artifactId>
                <version>${project.version}</version>
                <classifier>${api.classifier}</classifier>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>dev.getelements.elements.stripe</groupId>
                <artifactId>element</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- Stripe Java SDK - bundled inside the .elm (compile scope, not provided) -->
            <dependency>
                <groupId>com.stripe</groupId>
                <artifactId>stripe-java</artifactId>
                <version>${stripe.java.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

</project>
